--- a/index.html
+++ b/index.html
@@ -1,240 +1,74 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ChatAi-Me by Gxyenn</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Terminal VPS</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
     body {
-      background: #0e0e0e;
-      color: white;
-      overflow: hidden;
+      background: black;
+      color: #00ff00;
+      font-family: monospace;
+      padding: 0;
+      margin: 0;
     }
-    .loading-screen {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: #111;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      z-index: 9999;
-    }
-    .loading-image {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      border: 5px solid transparent;
-      border-top: 5px solid #0ff;
-      animation: spin 2s linear infinite;
-      background-image: url('https://files.catbox.moe/9qipex.jpg');
-      background-size: cover;
-      background-position: center;
-    }
-    .loading-text {
-      margin-top: 20px;
-      font-size: 24px;
-      animation: colorchange 2s infinite;
-    }
-    @keyframes spin {
-      from {transform: rotate(0deg);}
-      to {transform: rotate(360deg);}
-    }
-    @keyframes colorchange {
-      0% { color: #0ff; }
-      25% { color: #f0f; }
-      50% { color: #ff0; }
-      75% { color: #0f0; }
-      100% { color: #0ff; }
-    }
-    .top-bar {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      background: rgba(0,0,0,0.6);
-      z-index: 999;
-    }
-    .top-bar img {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      margin-right: 10px;
-      animation: colorchange 3s infinite;
-    }
-    .top-bar .dev-name {
-      font-size: 18px;
-      animation: colorchange 3s infinite;
-    }
-    .logo-spotify {
-      position: fixed;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .logo-spotify img {
-      width: 30px;
-    }
-    .logo-spotify button {
-      background: none;
-      border: 1px solid white;
-      color: white;
-      padding: 5px 10px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    .bottom-bar {
-      position: fixed;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      background: rgba(255,255,255,0.05);
-      border-radius: 15px 15px 0 0;
-      padding: 10px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .bottom-bar img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-    }
-    .bottom-bar .label {
-      font-size: 20px;
-      color: #0ff;
-    }
-    .chat-container {
+    #loading {
+      animation: bounce 0.5s ease-in-out infinite alternate;
       position: absolute;
-      top: 70px;
-      bottom: 100px;
-      left: 0;
-      right: 0;
-      overflow-y: auto;
-      padding: 20px;
-    }
-    .chat-bubble {
-      max-width: 70%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 10px;
-    }
-    .chat-user {
-      background: #0ff2;
-      margin-left: auto;
-    }
-    .chat-bot {
-      background: #fff2;
-      margin-right: auto;
-    }
-    .chat-input {
-      position: fixed;
-      bottom: 60px;
+      top: 45%;
       width: 100%;
-      display: flex;
-      padding: 10px;
-      gap: 10px;
-    }
-    .chat-input input[type="file"] {
-      display: none;
-    }
-    .chat-input textarea {
-      flex: 1;
-      padding: 10px;
-      border-radius: 10px;
-      border: none;
-      resize: none;
-    }
-    .chat-input button {
-      padding: 10px 15px;
-      border: none;
-      border-radius: 10px;
-      background: #0ff;
-      cursor: pointer;
-    }
-    .footer {
       text-align: center;
-      font-size: 12px;
-      color: #aaa;
-      animation: colorchange 4s infinite;
-      position: fixed;
-      bottom: 5px;
+      font-size: 2em;
+    }
+    @keyframes bounce {
+      from { transform: translateY(0); }
+      to { transform: translateY(-15px); }
+    }
+    #terminal {
+      display: none;
+      padding: 1em;
+      white-space: pre-wrap;
+    }
+    input {
+      background: transparent;
+      color: #00ff00;
+      border: none;
       width: 100%;
+      font: inherit;
+      outline: none;
     }
   </style>
 </head>
 <body>
-  <div class="loading-screen" id="loading">
-    <div class="loading-image"></div>
-    <div class="loading-text">Loading!</div>
-  </div>  <div class="top-bar">
-    <img src="https://files.catbox.moe/9qipex.jpg" alt="pfp">
-    <div class="dev-name">GxyennDev</div>
-  </div>  <div class="logo-spotify">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify">
-    <button>⏮️</button>
-    <button>▶️</button>
-    <button>⏭️</button>
-  </div>  <div class="chat-container" id="chat"></div>  <div class="chat-input">
-    <label for="upload"><button>+</button></label>
-    <input type="file" id="upload" multiple>
-    <textarea id="message" rows="1" placeholder="Tulis pesan..."></textarea>
-    <button onclick="sendMessage()">Kirim</button>
-    <button onclick="resetChat()">Reset</button>
-  </div>  <div class="bottom-bar">
-    <img src="https://files.catbox.moe/9qipex.jpg" alt="">
-    <div class="label">ChatAi-Me</div>
-  </div>  <div class="footer">ChatAi - By Gxyenn</div>  <script>
-    // Loading delay
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        document.getElementById('loading').style.display = 'none';
-      }, 2000);
-    });
+  <div id="loading">Loading!..</div>
+  <div id="terminal"></div>
 
-    function appendMessage(content, isUser = false) {
-      const chat = document.getElementById('chat');
-      const bubble = document.createElement('div');
-      bubble.className = `chat-bubble ${isUser ? 'chat-user' : 'chat-bot'}`;
-      bubble.innerHTML = content;
-      chat.appendChild(bubble);
-      chat.scrollTop = chat.scrollHeight;
-    }
-
-    async function sendMessage() {
-  const msg = document.getElementById('message').value;
-  if (!msg) return;
-  appendMessage(msg, true);
-  document.getElementById('message').value = '';
-
-  const res = await fetch('/chat', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json'
-    },
-    body: JSON.stringify({ message: msg })
-  });
-
-  const data = await res.json();
-  appendMessage(data.result);
-    }
-      
-    function resetChat() {
-      document.getElementById('chat').innerHTML = '';
-    }
-  </script></body>
+  <script>
+    setTimeout(() => {
+      document.getElementById('loading').style.display = 'none';
+      const term = document.getElementById('terminal');
+      term.style.display = 'block';
+      term.innerHTML = '$ ';
+      const input = document.createElement('input');
+      input.addEventListener('keydown', async (e) => {
+        if (e.key === 'Enter') {
+          const cmd = input.value;
+          term.innerHTML += cmd + '\n';
+          input.value = '';
+          const res = await fetch('/exec', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify({ cmd })
+          });
+          const data = await res.text();
+          term.innerHTML += data + '\n$ ';
+          term.appendChild(input);
+          input.focus();
+        }
+      });
+      term.appendChild(input);
+      input.focus();
+    }, 6000); // 6 detik animasi
+  </script>
+</body>
 </html>
